--- a/src/styles.css
+++ b/src/styles.css
@@ -5,21 +5,26 @@
 }
 
 body {
+  padding: 40px;
   font-size: 14px;
 }
 
 div {
   width: 100%;
-  margin: 20px;
+}
+
+div ul {
+  margin: 10px 0;
 }
 
 div li {
   display: flex;
   align-items: center;
+  padding: 20px;
 }
 
-div li + li {
-  margin-top: 15px;
+div li:nth-child(2n) {
+  background-color: #efefef;
 }
 
 button {
@@ -28,12 +33,10 @@ button {
   border: 0;
   padding: 10px 15px;
   cursor: pointer;
-  margin-top: 15px;
   font-weight: bold;
   font-size: 14px;
 }
 
 div li button {
-  margin: 0 15px;
   background: #ca4949;
 }
