--- a/src/styles.css
+++ b/src/styles.css
@@ -2,6 +2,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: sans-serif;
 }
 
 body {
@@ -39,4 +40,16 @@ button {
 
 div li button {
   background: #ca4949;
+}
+
+div input {
+  margin-right: 15px;
+  margin-bottom: 15px;
+  padding: 8px;
+}
+
+div textarea {
+  margin-bottom: 15px;
+  padding: 8px;
+  width: 393px;
 }
